--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@babel/runtime": "^7.9.2",
     "@fortawesome/fontawesome-free": "^5.13.0",
-    "core-js": "^3.6.5"
+    "core-js": "^3.6.5",
+    "lodash": "^4.17.15"
   }
 }
